# Mathor-Cup

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: q1.yaml  q2.yaml  q3.yaml  q4.yaml
docs/: experiment_protocol.md  modeling_assumptions.md  problem_statement.md  qubo_derivation.md
outputs/prescreen/: q1_penalty_candidates.md  q1_penalty_search.csv  q4_sensitivity.csv
outputs/qubo_ising/: q1_ising.csv  q1_ising_meta.json  q1_qubo_raw.csv  q2_qubo.csv  q2_qubo_meta.json  q2_qubo_raw.csv  q3_cluster_00_qubo.csv  q3_cluster_00_qubo_meta.json  q3_cluster_00_qubo_raw.csv  q3_cluster_01_qubo_meta.json  q3_cluster_01_qubo_raw.csv  q3_cluster_02_qubo_meta.json  q3_cluster_02_qubo_raw.csv  q3_cluster_03_qubo_meta.json  q3_cluster_04_qubo_meta.json  q3_export_manifest.json  q4_export_manifest.json  q4_export_manifest_v06.json  q4_export_manifest_v07.json  q4_export_manifest_v08.json  q4_export_manifest_v09.json  q4_export_manifest_v10.json  q4_export_manifest_v11.json  q4_export_manifest_vehicle_sweep.json  q4_v06_k05_vehicle_01_ising_meta.json  q4_v06_k05_vehicle_01_qubo_meta.json  q4_v06_k05_vehicle_02_ising.csv  q4_v06_k05_vehicle_02_qubo.csv  q4_v06_k05_vehicle_02_qubo_meta.json  q4_v06_k05_vehicle_02_qubo_raw.csv  q4_v06_k05_vehicle_03_ising.csv  q4_v06_k05_vehicle_03_qubo.csv  q4_v06_k05_vehicle_03_qubo_meta.json  q4_v06_k05_vehicle_03_qubo_raw.csv  q4_v06_k05_vehicle_04_ising_meta.json  (+166 more)
src/: __init__.py  main.py
tests/: test_data_validation.py  test_q4_feedback_selection.py  test_qubo_shapes.py  test_route_decode.py  test_time_window_penalty.py
(+151 files in other folders)
