[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathor-cup-quantum-logistics"
version = "0.1.0"
description = "2026 MathorCup Problem A — Quantum-computing-based smart logistics optimization"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MathorCup Team" }]
keywords = ["QUBO", "VRP", "quantum", "logistics", "optimization"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scipy>=1.11,<2.0",
    "openpyxl>=3.1,<4.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.12,<1.0",
    "networkx>=3.1,<4.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.1,<9.0",
    "rich>=13.0,<14.0",
    "scikit-learn>=1.3,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
mathor = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
